--- a/src/html/func/karnaughMap.html
+++ b/src/html/func/karnaughMap.html
@@ -3,12 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Karnaugh map</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+	<link rel="stylesheet" href="../../css/main/style.css" type="text/css">
+	<link rel="stylesheet" href="../../css/func/karnaughMap/karnaughMap.css" type="text/css">
 </head>
 <body>
-	<script src="../../js/struct/ParseTree.js"></script>
-	<script src="../../js/struct/parser.js"></script>
-	<script src="../../js/func/truthTable/truthTable.js"></script>
-	<script src="../../js/func/karnaughMap/karnaughMap.js"></script>
-	<script src="../../js/func/karnaughMap/main.js"></script>
+<div class="container-header">
+	<div class="container-name">
+		<a class="name-button" href="">ВАШЕ ИМЯ</a>
+	</div>
+	<div class="container-menu">
+		<a class="menu-button" href="">Обучение</a>
+		<a class="menu-button" href="">О нас</a>
+		<a class="menu-button" href="">Контакты</a>
+	</div>
+</div>
+<div class="container">
+</div>
+<script src="../../js/struct/ParseTree.js"></script>
+<script src="../../js/struct/parser.js"></script>
+<script src="../../../test/parserTest.js"></script>
+<script src="../../js/func/truthTable/truthTable.js"></script>
+<script src="../../js/func/karnaughMap/karnaughMap.js"></script>
+<script src="../../js/func/karnaughMap/main.js"></script>
 </body>
 </html>
