add function truthTable

--- a/src/html/func/truthTable.html
+++ b/src/html/func/truthTable.html
@@ -3,11 +3,36 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Truth table</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+	<link rel="stylesheet" href="../../css/main/style.css" type="text/css">
 </head>
 <body>
-	<script src="../../js/struct/ParseTree.js"></script>
-	<script src="../../js/struct/parser.js"></script>
-	<script src="../../js/func/truthTable/truthTable.js"></script>
-	<script src="../../js/func/truthTable/main.js"></script>
+<div class="container-header">
+	<div class="container-name">
+		<a class="name-button" href="">ВАШЕ ИМЯ</a>
+	</div>
+	<div class="container-menu">
+		<a class="menu-button" href="">Обучение</a>
+		<a class="menu-button" href="">О нас</a>
+		<a class="menu-button" href="">Контакты</a>
+	</div>
+</div>
+<div id="menu">
+	<h3>
+
+	</h3>
+
+</div>
+<div></div>
+<script>
+
+
+</script>
+<script type="text/javascript">
+</script>
+<script src="../../js/struct/ParseTree.js"></script>
+<script src="../../js/struct/parser.js"></script>
+<script src="../../js/func/truthTable/truthTable.js"></script>
+<script src="../../js/func/truthTable/main.js"></script>
 </body>
 </html>
